# cpp_fun

./: .clang-format  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  pyproject.toml  sensor.cpp  setup.py  vcpkg.json
cmake/: startConfig.cmake.in
include/start/: sensor.h
src/: bindings.cpp  main.cpp  sensor.cpp
start_lib/: __init__.py
tests/: CMakeLists.txt  test_sensor.cpp
