[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "start_lib"
version = "1.0.0"
description = "Python bindings for start C++ library (Sensor API)"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["start_lib*"]
